add tailwind proper and add logic to encode result in html

--- a/public/components/todo_item.html
+++ b/public/components/todo_item.html
@@ -8,9 +8,7 @@
                 <h3 class="text-xl font-medium text-black">
                     {{ .Title }}
                 </h3>
-                <p class="text-slate-500">
-                    {{ .Body.String }}
-                </p>
+                {{ .EncodedBody }}
             </div>
         </li>
     {{ end }}
