--- a/public/templates/todo_form.html
+++ b/public/templates/todo_form.html
@@ -1,19 +1,9 @@
 {{define "todo_form"}}
-    <form hx-post="/add-todo" hx-target="#todo-list" hx-swap="beforeend" hx-indicator="#spinner"
+    <form hx-post="/add-todo" hx-target="#todo-list" hx-swap="beforebegin" hx-indicator="#spinner"
         hx-on::after-request="this.reset()">
-        <!-- <div class="sm:max-w-sm">
-            <label class="text-xl" for="todo-title">Title</label>
-            <br>
-            <input type="text" name="title" id="todo-title"
-                class="block w-full rounded-md border-0 py-1.5 
-                text-gray-900 shadow-sm ring-1 ring-inset 
-                ring-gray-300 
-                placeholder:text-gray-400 
-                focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
-        </div> -->
-        {{template "text_input" .Meta}}
+        {{template "text_input" .Meta.Title}}
         <div class="sm:max-w-2xl">
-            <label for="todo-body">Body</label>
+            <label class="text-xl my-10" for="todo-body">Body</label>
             <textarea type="text" name="body" id="todo-body" class="form-control"></textarea>
         </div>
         <script src="/dist/simplemde.js"></script>
