--- a/public/components/text_input.html
+++ b/public/components/text_input.html
@@ -1,8 +1,10 @@
 {{define "text_input"}}
-<div class="sm:max-w-sm">
+<div>
     <label class="text-xl" for="{{.ID}}">{{.Label}}</label>
     <br>
-    <input type="text" name="{{.Name}}" id="{{.ID}}" class="block w-full rounded-md border-0 py-1.5 
+    <input 
+    value="{{.Value}}"
+    type="text" name="{{.Name}}" id="{{.ID}}" class="block w-full rounded-md border-0 py-1.5 
             text-gray-900 shadow-sm ring-1 ring-inset 
             ring-gray-300 
             placeholder:text-gray-400 
