--- a/public/views/index.html
+++ b/public/views/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="flex flex-row">
-        <div class="basis-auto">
+        <div class="basis-1/2">
             <h1 class="text-3xl my-10 mx-10">Todo List</h1>
 
             <ul id="todo-list">
